Замечания+мелочи из-за презентации+титул

--- a/temp.tex
+++ b/temp.tex
@@ -63,25 +63,18 @@
 
     \bigskip
 	Московский государственный университет имени М.\,В. Ломоносова\\
-	Факультет Вычислительной математики и кибернетики\\
-	Кафедра Математических методов прогнозирования\\[20mm]
+	Факультет вычислительной математики и кибернетики\\
+	Кафедра математических методов прогнозирования\\[20mm]
 
-    {\large
-        ДИПЛОМНАЯ РАБОТА\\[10mm]
-\bfseries
-        Управление динамическим объектом с использованием нейрокомпьютерного интерфейса
+    {\Large
+        ЗИННУРОВА Эльвира Альбертовна\\[10mm]
+\textbf{Управление динамическим объектом с использованием нейрокомпьютерного интерфейса}\\[2cm]
+	\large ДИПЛОМНАЯ РАБОТА	
     }\\[10mm]
 
     \vfill
 
 \begin{flushright}
-  %\large
-  \textbf{Автор:}\\
-  студент 517 группы\\
-  Зиннурова Эльвира Альбертовна
-
-  \vspace{5mm}
-
   \textbf{Научный руководитель:}\\
   к.ф.-м.н., доцент\\
   Гуров Сергей Исаевич
@@ -101,36 +94,11 @@
 \tableofcontents
 
 \newpage
-\begin{abstract}
-	TODO: Написать аннотацию
-    %Данный документ является образцом оформления дипломной работы для студентов кафедры 
-    %Математических методов прогнозирования ВМК~МГУ. 
-    %Приведённые ниже рекомендации взяты из~статьи
-    %<<Написание отчётов и статей (рекомендации)>>
-    %на~вики"~ресурсе \texttt{www.MachineLearning.ru}.
-    %Студенты, готовящие дипломную работу к~защите, 
-    %могут найти много полезной информации также в~статьях 
-    %<<Научно-исследовательская работа (рекомендации)>>,
-    %<<Подготовка презентаций (рекомендации)>>,
-   % <<Защита выпускной квалификационной работы (рекомендации)>>
-    %на~том~же ресурсе. 
-
-    %Аннотация обычно содержит 
-    %краткое описание постановки задачи и~полученных результатов,
-    %одним абзацем на 10--15 строк.
-    %Цель аннотации "--- обозначить в~общих чертах, о~чём работа,
-    %чтобы человек, совершенно не~знакомый с~данной работой,
-    %понял, интересна~ли ему эта тема, и~стоит~ли читать дальше.
-    %Аннотация собирается в~последнюю очередь
-    %путем легкой модификации наиболее важных и~удачных фраз из введения и~заключения.
-\end{abstract}
-
-\newpage
 \section{Введение}
 	\quad\,\,\,Нейрокомпьютерный интерфейс (англ. {\it brain-computer interface, mind-machine interface, brain–machine interface}, интерфейс «мозг-компьютер», зачастую используется сокращение {\it BCI}) ~--- специальный вид интерфейса, созданный для обмена информацией между мозгом и средствами вычислительной техники. Одной из задач, стоящих перед исследователями, работающими в данной области, является создание устройств, которые позволят людям с утраченными способностями организма полноценно взаимодействовать с окружающим миром.
 	\par В последние годы ведётся активная разработка различных практических приложений с использованием интерфейса «мозг-компьютер». Многие исследовательские группы по всему миру занимаются тематикой {\it BCI}, и в разработке многих направлений тематики имеются заметные успехи, однако до сих пор существует масса сложностей в практическом применении нейрокомпьютерного интерфейса. Управление объектами реального мира может быть использовано в широком спектре областей, в частности, в медицине, развлекательной индустрии и пр.
 	\par Тем не менее, на сегодняшний день распознавание воображаемых движений является стандартной задачей, разработаны алгоритмы, практически безошибочно классифицирующие ментальные задания, однако построенные системы {\it BCI} сложно назвать приспособленными для использования с практической точки зрения.
-	\par Основной целью данной работы является построение модели нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}. Кроме того, в данной дипломной работе проводится обзор существующих систем {\it BCI} и распространённых подходов к решению подобного рода задач.
+	\par Основной целью данной работы является разработка нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}. Кроме того, в данной дипломной работе проводится обзор существующих систем {\it BCI} и распространённых подходов к решению подобного рода задач.
 	\par В первой главе даётся формальная постановка решаемой задачи.
 	\par Далее описано используемое в данной работе оборудование, перечислены типы нейрофизиологических сигналов и объяснены причины, благодаря которым становится возможным решение поставленной задачи, а также обозначены имеющиеся на сегодняшний день проблемы при решении подобного рода задач.
 	\par Затем перечислены и описаны алгоритмы, наиболее часто применяющиеся при решении задач в области нейрокомпьютерных интерфейсов, а также представлены наиболее распространённые методы сравнения систем {\it BCI}.
@@ -140,7 +108,7 @@
 \clearpage 
 
 \section{Постановка задачи}
-	\quad\,\,\,Целью данной работы является построение модели нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}, предназначенного для регистрации активности головного мозга при помощи зафиксированных сенсоров. Данное устройство подробно описано в разделе~\ref{Emotiv_descr}.
+	\quad\,\,\,Целью данной работы является разработка нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}, предназначенного для регистрации активности головного мозга при помощи зафиксированных сенсоров. Данное устройство подробно описано в разделе~\ref{Emotiv_descr}.
  	\par Пусть имеется $M$ сенсоров, в моменты времени $1, 2, \dots, t, \dots$ $i$-ый сенсор фиксирует значения $x^i(t)$, $i = \overline{1,M}.$ Требуется определить класс регистрируемого в произвольный момент времени $t$ сигнала, в частности, в данной работе в качестве классов выступают возможные направления движения курсора. Обычно полагают, что многомерный сигнал разбит на отрезки фиксированной длины $T$, на протяжении каждого из которых класс сигнала остаётся неизменным. Везде далее будем придерживаться данного предположения.
 	\par Дадим формальную математическую постановку задачи.
 	\par Имеется пространство объектов $\mathcal{X} \subset \mathbb{R}^{M \times T}$, каждый из которых представляет собой сигнал, зафиксированный при помощи $M$ сенсоров в течение периода времени $T$, и конечное множество имён классов $\mathcal{Y}$. Существует целевая зависимость $y^*: \mathcal{X} \to \mathcal{Y},$ значения которой известны только на объектах обучающей выборки $X^L = \{ (x^i, y^i)\}_{i=1}^L, \, x^i \in \mathcal{X} \subset \mathbb{R}^{M \times T}, \, y^i = y^*(x^i) \in \mathcal{Y}, \, L$ -- количество объектов обучающей выборки. Требуется построить алгоритм классификации $a: \mathcal{X} \to \mathcal{Y},$ аппроксимирующий целевую зависимость $y^*(x)$ на всем множестве $\mathcal{X}$ в соответствии с некоторым введённым функционалом качества.
@@ -150,7 +118,7 @@
 \section{Нейрокомпьютерные интерфейсы}
 	\subsection{Используемое оборудование}\label{Emotiv_descr}
 	\par Главная цель исследований в области нейрокомпьютерных интерфейсов -- разработка систем, позволяющих обездвиженным пользователям обмениваться информацией и взаимодействовать с другими людьми, а также контролировать различные элементы их окружения. Кроме того, подобные системы могут быть использованы для улучшения контроля над сложными многозадачными операциями.
-	\par Нейрокомпьютерный интерфейс -- средство коммуникации, транслирующее активность головного мозга в действия либо команды, исполняемые электронными устройствами. Фиксация подобного рода активности становится возможной вследствие физико-химических процессов, лежащих в основе обмена веществ в нервной ткани, порождающих колебания потенциалов головного мозга. Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикография\footnote{{\it Электрокортикография} — метод отведения потенциалов при помощи электродов, накладывающихся непосредственно на кору головного мозга. Потенциалы имеют на порядок большую амплитуду по сравнению с ЭЭГ, а также лучшее разрешение.}, электроокулография\footnote{{\it Электроокулография} — исследование глазных мышц и наружного слоя сетчатки благодаря изменениям биопотенциалов во время движения глаза и стимуляции сетчатки, и переводу зарегистрированных изменений в графическое представление.} и др.), в настоящее время основным способом получения сигналов головного мозга является электроэнцефалография. 
+	\par Нейрокомпьютерный интерфейс -- средство коммуникации, транслирующее активность головного мозга в действия либо команды, исполняемые электронными устройствами. Фиксация подобного рода активности становится возможной вследствие физико-химических процессов, лежащих в основе обмена веществ в нервной ткани, порождающих колебания потенциалов головного мозга. Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикография\footnote{{\it Электрокортикография} — метод отведения потенциалов при помощи электродов, накладывающихся непосредственно на кору головного мозга. Потенциалы имеют на порядок большую амплитуду по сравнению с ЭЭГ, а также лучшее разрешение.}, электроокулография\footnote{{\it Электроокулография} — исследование глазных мышц и наружного слоя сетчатки благодаря изменениям биопотенциалов во время движения глаза и стимуляции сетчатки, и переводу зарегистрированных изменений в графическое представление.} и др.), в настоящее время основным способом регистрации сигналов головного мозга является электроэнцефалография. 
 	\par {\it Электроэнцефалография (ЭЭГ)} — раздел электрофизиологии, изучающий закономерности суммарной электрической активности мозга, отводимой с поверхности кожи головы или мозга, а также метод записи таких потенциалов. Получение электроэнцефалограммы осуществляется с помощью специализированных устройств -- электроэнцефалографов. Существуют различные устройства для записи ЭЭГ, отличающиеся характеристиками, среди которых: 
 	\begin{itemize}\itemsep0pt
 	\item
@@ -178,9 +146,9 @@
 	\par Общий вид устройства изображён на рис.~\ref{Emotiv}, устройство обладает следующими характеристиками:
 	\begin{itemize}\itemsep0pt
 	\item
-	число датчиков — 14;
+	число сенсоров — 14;
 	\item
-	тип датчиков — пассивные, мокрые;
+	тип сенсоров — пассивные, мокрые;
 	\item
 	частота дискретизации — 128 Гц;
 	\item
@@ -193,7 +161,7 @@
 
 	\par Расположение сенсоров устройства в соответствии с системой размещения электродов <<10 -- 20\%>>\footnote{Система «10—20\%» — стандартная система размещения электродов на поверхности головы, рекомендованная Международной федерацией электроэнцефалографии и клинической нейрофизиологии. Подробное описание данной системы может быть найдено в~\cite{system10-20}.} изображено на рис.~\ref{electrode_map}.
 
-	\par Устройство {\it Emotiv EPOC} было использовано в силу своей простоты и доступности. Также достоинствами данного устройства являются портативность и небольшие размеры. В то же время оно обладает и рядом недостатков: низкая точность снимаемого сигнала и ненадёжная фиксация устройства на голове человека. В рамках настоящей работы будет предпринята попытка купировать недостатки устройства применяемыми методами обработки и классификации сигнала.
+	\par Устройство {\it Emotiv EPOC} было использовано в силу своей простоты и доступности. Также достоинствами данного устройства являются портативность и небольшие размеры. В то же время оно обладает и рядом недостатков: низкая точность снимаемого сигнала и ненадёжная фиксация устройства на голове человека. В рамках настоящей работы будет предпринята попытка купировать недостатки устройства применяемыми методами обработки и классификации сигналов.
 
 	\begin{figure}[h!]
 	\center{\includegraphics[width=0.9\textwidth]{electrode_map_1020.png}}
@@ -202,15 +170,15 @@
 	\end{figure}
 
 	\subsection{Типы нейрофизиологических сигналов}
-	\par Предполагается, что идеализированный нейрокомпьютерный интерфейс будет напрямую транслировать всякое намерение пользователя и посылать сигнал управляемому устройству о выполнении соответствующего действия. Однако установление однозначного соответствия между намерениями пользователя и нейрофизиологическими сигналами является нетривиальной задачей. На сегодняшний день данный факт является одной из основных причин ограничения свободы действий в существующих системах {\it BCI}.
-	\par Для распознавания различных нейрофизиологических сигналов и возможности сопоставления подобного рода сигналов и подразумеваемых действий необходимо осознанное управление активностью головного мозга. В основном для достижения этой цели используются два подхода. При использовании первого подхода испытыемые подвергаются воздействию набора стимулов нейрокомпьютерного интерфейса, и контроль мозговой активности осуществляется путём концентрации на одном конкретном стимуле. Изменения нейрофизиологических сигналов в силу различий между стимулами называются {\it вызванными потенциалами} (англ. {\it event-related potentials, ERPs}). При использовании второго подхода управление мозговой активностью осуществляется путём выполнения определённого когнитивного (ментального) задания, например, представления определённого движения руки может явиться причиной изменения активности в соответствующей части скальпа.\\
+	\par Предполагается, что идеализированный нейрокомпьютерный интерфейс будет напрямую транслировать всякое намерение пользователя и подавать управляемому устройству сигнал о выполнении соответствующего действия. Однако установление однозначного соответствия между намерениями пользователя и нейрофизиологическими сигналами является нетривиальной задачей. На сегодняшний день данный факт является одной из основных причин ограниченности свободы действий в существующих системах {\it BCI}.
+	\par Для распознавания различных нейрофизиологических сигналов и возможности сопоставления подобного рода сигналов и подразумеваемых действий необходимо осознанное управление активностью головного мозга. В основном для достижения этой цели используются два подхода. При использовании первого подхода испытуемые подвергаются воздействию набора стимулов нейрокомпьютерного интерфейса, и контроль мозговой активности осуществляется путём концентрации на одном конкретном стимуле. Изменения нейрофизиологических сигналов в силу различий между стимулами называются {\it вызванными потенциалами} (англ. {\it event-related potentials, ERPs}). При использовании второго подхода управление мозговой активностью осуществляется путём выполнения определённого когнитивного (ментального) задания, например, представления определённого движения руки может явиться причиной изменения активности в соответствующей части скальпа.\\
 	\setcounter{pe}{0}
 	\NepS {\bf Вызванные потенциалы}
 	\par Вызванный потенциал — электрическая реакция мозга на внешний раздражитель или на выполнение некоторого ментального задания. Потенциалы данного вида имеют место в течение определённого промежутка времени после воздействия стимула.
 	\paragraph{Волны P300.}
 	\parВолна P300 -- положительное отклонение сигнала ЭЭГ, имеющее место приблизительно через 300 мс после воздействия стимула с малой вероятностью появления, описывающего некоторое действие. Для порождения подобного рода волн испытуемому требуется пронаблюдать последовательность двух типов стимулов. Первый тип стимулов (т.н. {\it целевые} стимулы) являются редкими в последовательности стимулов, в отличие от другого типа стимулов (т.н. {\it нецелевые} стимулы). Таким образом, во время появления целевого стимула может быть зафиксирована мозговая активность, содержащая волны P300. Данный принцип был применен в системе {\it BCI}, разработанной в исследовании \cite{Farwell_Donchin}. В данном исследовании было описано устройство для набора текста. На экране изображалась таблица доступных для набора символов, строки и столбцы которой выделялись в случайном порядке, в качестве целевого стимула выступало выделение столбца/строки с желаемым на данный момент символом, в качестве нецелевых стимулов -- выделение остальных столбцов/строк.
 	\paragraph{Визуальные вызванные потенциалы.}
-	\par Визуальные вызванные потенциалы (англ. {\it Steady-State Visual Evoked Potentials}, {\it SSVEPs}) -- осцилляции, имеющие место в данных, полученных при помощи сенсоров, расположенных на затылке. Данные изменения могут быть результатом однородного процесса, повторяющегося с малой частотой. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность выбора действия, соответствующего данному стимулу.\\
+	\par Визуальные вызванные потенциалы (англ. {\it Steady-State Visual Evoked Potentials}, {\it SSVEPs}) -- осцилляции, имеющие место в данных, полученных при помощи сенсоров, расположенных на затылке. Данные изменения могут быть результатом наблюдения однородного процесса, повторяющегося с малой частотой. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность выбора действия, соответствующего данному стимулу.\\
 	\paragraph{Моторные вызванные потенциалы.}
 	\par Моторные вызванные потенциалы (англ. {\it Motor-Related Potentials}, {\it MRPs}) -- продолжительные отрицательные потенциалы, связанные с ожиданием или ментальным представлением выполняемого движения или действия, имеют место в сенсомоторной части скальпа в начале выполнения движения или в процессе ментального представления движения.
 	\\ \NepS {\bf Частотная мозговая активность}
@@ -336,24 +304,24 @@ $$X^TX \alpha = \lambda \alpha,$$
 	
 	\NepS {\bf Морфологические признаки}
 	\par Морфологические признаки описывают изменения амплитуд нейрофизиологических сигналов, происходящих в течение определённого временного промежутка. Часто используемая стратегия разделения фоновой активности и волн P300 состоит в применении фильтра низких частот или фильтра с некоторой полосой пропускания с последующим возможным прореживанием сигнала, поскольку большая часть компоненты волны P300 сконцентрирована именно в области низких частот, а потому описанная процедура позволяет нейтрализовать влияние избыточной информации. Помимо прочего, это также ведёт к снижению размерности сигнала.
-	\par Пусть имеется сигнал $s = [s_1, \dots, s_T].$ Для описания формы сигнала могут быть вычислены морфологические признаки, используемые отдельно или совместно с другими признаками. Некоторые из них перечислены ниже.
+	\par Пусть имеется сигнал $x = [x_1, \dots, x_T].$ Для описания формы сигнала могут быть вычислены морфологические признаки, используемые отдельно или совместно с другими признаками. Некоторые из них перечислены ниже.
 	\begin{itemize}
 	\item 
-	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle s_{max} = \max_{t = 1, \dots, T} \{{s_t}\}$.
+	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle x_{max} = \max_{t = 1, \dots, T} \{{x_t}\}$.
 	\item
-	{\bf Латентность} -- момент регистрации максимального значения сигнала для вызванных потенциалов: $\displaystyle t_{max} = \arg \max_{t=1, \dots, T} \{ s_t \}$, где $s$ регистрируется в течение фиксированного промежутка после выделения стимула.
+	{\bf Латентность} -- момент регистрации максимального значения сигнала для вызванных потенциалов: $\displaystyle t_{max} = \arg \max_{t=1, \dots, T} \{ x_t \}$, где $x$ регистрируется в течение фиксированного промежутка после выделения стимула.
 	\item
-	{\bf Отношение латентность/амплитуда}: $\displaystyle LAR = \frac{t_{max}}{s_{max}}$.
+	{\bf Отношение латентность/амплитуда}: $\displaystyle LAR = \frac{t_{max}}{x_{max}}$.
 	\item
-	{\bf Абсолютная амплитуда}: $\displaystyle AAMP = \left| s_{max} \right|$.
+	{\bf Абсолютная амплитуда}: $\displaystyle AAMP = \left| x_{max} \right|$.
 	\item
-	{\bf Абсолютное отношение латентность/амплитуда}: $\displaystyle ALAR = \left| \frac{t_{max}}{s_{max}} \right|$.
+	{\bf Абсолютное отношение латентность/амплитуда}: $\displaystyle ALAR = \left| \frac{t_{max}}{x_{max}} \right|$.
 	\item
-	{\bf Положительная область} -- сумма положительных значений сигнала: \\ $\displaystyle PAR~=~\sum_{t = 1} ^ T \frac{s_t + |s_t|}{2}.$
+	{\bf Положительная область} -- сумма положительных значений сигнала: \\ $\displaystyle PAR~=~\sum_{t = 1} ^ T \frac{x_t + |x_t|}{2}.$
 	\item
-	{\bf Отрицательная область} -- сумма отрицательных значений сигнала: \\$\displaystyle NAR~=~\sum_{t = 1} ^ T \frac{s_t - |s_t|}{2}.$
+	{\bf Отрицательная область} -- сумма отрицательных значений сигнала: \\$\displaystyle NAR~=~\sum_{t = 1} ^ T \frac{x_t - |x_t|}{2}.$
 	\item
-	{\bf Межпиковая разность}: $\displaystyle PP = s_{max} - s_{min},$ где $s_{max}$ и $s_{min}$ - максимальное и минимальное значения сигнала соответственно.
+	{\bf Межпиковая разность}: $\displaystyle PP = x_{max} - x_{min},$ где $x_{max}$ и $x_{min}$ - максимальное и минимальное значения сигнала соответственно.
 	\item
 	{\bf Межпиковое расстояние}: $\displaystyle PPT = t_{max} - t_{min}.$
 	\end{itemize}
@@ -379,7 +347,7 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 \begin{minipage}[h!]{1.0\linewidth}
 \center{\includegraphics[width=0.8\linewidth]{wave2.png} \\ б)}
 \end{minipage}
-\caption{Схема действия одно- (а) и трёхуровнего дискретного вейвлет-преобразования.}
+\caption{Схема действия одно- (а) и трёхуровнего (б) дискретного вейвлет-преобразования.}
 \label{wavelet_scheme}
 \end{figure}
 	\mbox{}\newline
@@ -520,13 +488,14 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\paragraph{Выделение отдельных проб.}
 	\par После этого из полученных данных были выделены отдельные пробы продолжительностью 1500 мс. Начало пробы совпадало с началом выделения визуального стимула на экране компьютера, конец пробы приходился на момент через 1500 мс после начала выделения стимула (250 мс выделения визуального стимула и 1250 мс ожидания). Таким образом, для дальнейшей обработки и определения наличия волн P300 имеются данные, представленные в виде потенциалов, зарегистрированных для 192 моментов времени для каждого из сенсоров после выделения каждого из визуальных стимулов.
 	\paragraph{Фильтрация.}
-	\par Были проведены эксперименты с использованием различных типов цифровых фильтров для обработки полученных сигналов, в частности, полосно-пропускного фильтра Чебышева 4-го порядка 1-го типа, фильтра Баттерворта и эллиптического полосно-пропускной фильтра с полосой пропускания 0.16--43 Гц.
+	\par Отметим, что используемый электроэнцефалограф подвергает регистрируемые данные внутренней фильтрации с полосой пропускания 0.16--43 Гц.
+	\par Были проведены эксперименты с использованием различных типов цифровых фильтров для обработки полученных сигналов, в частности, фильтра Чебышева 4-го порядка 1-го рода, фильтра Баттерворта и эллиптического фильтра с частотой среза 30 Гц.
 	\paragraph{Мeтод независимых компонент.}
 	\par К данным ЭЭГ, подвергнутым фильтрации, был применен метод независимых компонент для извлечения независимых источников. Была использована реализация алгоритма {\it FastICA} для {\tt MATLAB}. Описание алгоритма было представлено в предыдущих разделах. Более подробно алгоритм описан в \cite{FastICA}.
 
 	\subsection{Отбор признаков}
-	\par В исследовании \cite{Piccione} был применен метод с использованием нечетких регуляторов (англ. {\it fuzzy control method}) для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как показано в некоторых исследованиях~\cite{alco}. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом продолжительности проб и типа применяемого дискретного вейвлет-преобразования, получаем $N_f = 18 + 9 = 27.$ С учётом выбора одного из указанных подмножеств электродов имеем $N_e = 8$ или $N_e = 10.$
-	\par Далее отобранные признаки подвергались стандартизации, т.е. преобразованию, обеспечивающему нулевое среднее значение каждого признака и единичную матрицу ковариаций. Нормировочные константы вычисляются для каждого сенсора с учётом всех имеющихся в обучающей выборке данных, а затем также применялись к отложенной выборке. Отметим, что стандартизации отдельных проб без учёта остальной информации может уничтожить важную информацию об амплитуде имеющихся волн P300, в связи с этим необходимо проведение данной процедуры для всех зарегистрированных проб.
+	\par В исследовании \cite{Piccione} был применен метод с использованием нечетких регуляторов (англ. {\it fuzzy control method}) для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как показано в некоторых исследованиях~\cite{alco}. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом выбора одного из указанных подмножеств электродов имеем $N_e = 8$ или $N_e = 10.$
+	\par Далее отобранные признаки подвергались стандартизации, т.е. преобразованию, обеспечивающему нулевое среднее значение каждого признака и единичную матрицу ковариаций. Нормировочные константы вычислялись для каждого сенсора с учётом всех имеющихся в обучающей выборке данных, а затем также применялись к отложенной выборке. Отметим, что стандартизации отдельных проб без учёта остальной информации может уничтожить важную информацию об амплитуде имеющихся волн P300, в связи с этим необходимо проведение данной процедуры для всех зарегистрированных проб.
 
 \subsection{Классификация}
 	\par После предобработки и отбора признаков, наиболее вероятно характеризующих наличие либо отсутствие волны P300, проводились обучение и  настройка параметров классификатора. Как было упомянуто выше, данные центрированы и имеют единичную матрицу ковариаций. В качестве классификаторов были использованы нейронная сеть и машина опорных векторов.
@@ -538,7 +507,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\end{figure}
 
 	\par Кроме того, была использована реализация машины опорных векторов в библиотеке {\it LibSVM}. Для алгоритма с единым классификатором было использовано квадратичное ядро, в то время как для алгоритма с отдельными классификаторами была использована линейная версия {\it SVM}. Значение гиперпараметра $C$ настраивалось при помощи отложенной выборки.
-	\par Для подхода с применением единого классификатора, обучающая выборка состояла из $4N$ целевых и $13N$ нецелевых эпох. В связи с высоким уровнем шума в данных было проведено усреднение по наборам из пяти эпох. Как было упомянуто выше, случайно выбранные 75\% полученных объектов были использованы для обучения классификатора, в то время как оставшиеся 25\% были использованы для настройки параметров.
+	\par Для подхода с применением единого классификатора обучающая выборка состояла из $4N$ целевых и $13N$ нецелевых эпох. В связи с высоким уровнем шума в данных было проведено усреднение по наборам из пяти эпох. Как было упомянуто выше, случайно выбранные 75\% полученных объектов были использованы для обучения классификатора, в то время как оставшиеся 25\% были использованы для настройки параметров.
 	\par Для подхода, использующего отдельные классификаторы, были обучены четыре различных машины опорных векторов, отвечающих различным визуальным стимулам. В данном случае для каждого из классификаторов были доступны $N$ целевых и $4N$ нецелевых эпох, а усреднение проводилось по наборам из 3 эпох.
 
 \subsection{Тестирование}
@@ -614,14 +583,15 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\par Для испытуемых значение чувствительности оказалось довольно низким. Таким образом, система распознавала приблизительную предполагаемую траекторию движения курсора, однако для распознавания непосредственно команды необходимо было ожидание в течение нескольких проб, как следствие, наблюдалось падение производительности системы. Тем не менее, приемлемое значение точности может быть достигнуто при низком значении специфичности. Высокое же значение данной характеристики дезориентирует пользователя и может привести к невозможности дальнейшего управления курсором, поскольку траектория в таких случаях радикально отличается от предполагаемой пользователем. Отметим, что полученные значения специфичности сравнимы в результатами, полученными в \cite{Kanoh}. Предложенный в данной работе метод позволяет добиться лучших результатов по сравнению с подходом, предложенным в исследовании~\cite{pseudo}, при использовании {\it Emotiv EPOC}.
 	\par Кроме того, в результате экспериментов было отмечено, что использование изображений стрелок в качестве визуальных стимулов ведёт к лучшим результатам, нежели изображений надписей.
 	\par Наилучший результат был получен при применении подхода, использующего отдельные классификаторы для различных типов стимулов. Тем не менее, полученные результаты не свидетельствуют о том, что использование подхода отдельных классификаторов гарантирует лучший результат, нежели использование подхода с единым классификатором.
-	\par Низкое значение точности полученной системы может быть результатом различных причин, среди которых следующие:
+	\par Описанные результаты функционирования разработанной системы могут быть результатом различных причин, среди которых следующие:
 	\paragraph{Расположение сенсоров.}
-	\par В инверсированном положении расположение электродов было приблизительным и, поскольку устройство было разработано для эксплуатации в позиции по умолчанию, некоторые из сенсоров ненадёжно крепились к голове испытуемого, не обеспечивая должного качества регистрируемого сигнала. Кроме того, изменились также и положения опорных электродов, тем самым повлияв на внутреннюю обработку получаемых данных в устройстве.
+	\par В инверсированном положении расположение электродов являлось приблизительным и, поскольку устройство было разработано для эксплуатации в позиции по умолчанию, некоторые из сенсоров ненадёжно крепились к голове испытуемого, не обеспечивая должного качества регистрируемого сигнала. Кроме того, изменились также и положения опорных электродов, тем самым повлияв на внутреннюю обработку получаемых данных в устройстве.
 	\paragraph{Количество сенсоров.}
 	\par Как было упомянуто выше, в положении устройства по умолчанию сенсоры не покрывают часть скальпа, отвечающую за генерацию волн P300. В инверсированном положении приблизительно не более шести электродов расположены в данной области, и, тем не менее, ни один из них не расположен в области, наиболее активно отвечающей за данный процесс.
 	\paragraph{Отношение сигнал-шум.}
 	\par Поскольку устройство было разработано для развлекательных целей, нет возможности гарантировать должное качество изготовления его деталей и, тем самым, качества снимаемого сигнала.
-
+	\paragraph{Задержка при фиксации сигналов.}
+	\par Отсутствие возможности получения исходных данных ЭЭГ без использования разработанного для устройства программного обеспечения также ведёт к падению производительности системы. По информации производителя, передача данных производится с обеспечением задержки во времени, не превышающей 15 мс, что является причиной потери некоторой доли данных.
 \newpage
 \section{Заключение}
 	\par В рамках настоящей дипломной работы были изучены существующие подходы к решению задач построения нейрокомпьютерных интерфейсов. Был предложен метод построения нейрокомпьютерного интерфейса для управления динамическим объектом, а также было проведено сравнение с аналогичными исследованиями последних лет.
@@ -632,7 +602,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 		\item
 		Предложенный метод был протестирован при помощи программной реализации в системе MATLAB.
 		\item
-		Результаты работы описанного подхода не уступают существующим на сегодняшний день методам решения данной задачи с использованием схожего оборудования. Сделанные выводы изложены в работе.
+		Результаты работы описанного подхода находятся на уровне существующих на сегодняшний день методов решения данной задачи с использованием схожего оборудования. Сделанные выводы изложены в работе.
 	\end{itemize}\par
 
 
@@ -687,7 +657,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	{\it Khemri~N.A.} P300 Wave Detection Using a Commercial Non-invasive Eeg Sensor: Reliability and Performance in Control Applications. // Graduate College of the Oklahoma State University, 2012.
 
 \bibitem{activation}
-	{\it LeCun~Y., Bottou~L., Genevieve B. Orr, Müller K.-R.} Efficient BackProp. // Lecture Notes in Computer Science, Vol. 1524, pp. 9-50, 2002.
+	{\it LeCun~Y., Bottou~L., Genevieve B. Orr, Müller K.-R.} Efficient BackProp. / Lecture Notes in Computer Science, Vol. 1524, pp. 9-50, 2002.
 
 \bibitem{P300_eval}
 {\it Amcalar A., Cetin M.} Design, Implementation and Evaluation of a Real-Time P300-based Brain-Computer Interface System. // IEEE International Conference on Pattern Recognition, pp. 117-120, 2010.
